--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="holder">
+	<div class="box" style="background-color: green;">
+      <p style="font-size: larger;">3</p>
+    </div>
+    <div class="box" style="background-color: red;">
+        <p style="font-size: larger;">1</p>
+    </div>
+    <div class="box" style="background-color: blue;">
+        <p style="font-size: larger;">2</p>
+    </div>
+</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
